# arcagate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  PRIVACY.md  README.md  RELEASE.md  biome.json  dprint.json  lefthook.yml  package.json  playwright.config.ts  playwright.en.config.ts  playwright.perf.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
.claude/commands/: claude-md.md
.claude/hooks/: guard-tauri.mjs
.claude/rules/: backend.md  docs.md  engineering.md  frontend.md  workflow.md
.claude/skills/: arcagate.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  e2e-nightly.yml  e2e.yml  (+4 more)
docs/: CLAUDE.md  README.md  desktop_ui_ux_agent_rules.md  dispatch-log.md  dispatch-operation.md  dispatch-queue.md  distribution-readiness.md  distribution-rollback-sop.md  lessons.md  llms.txt  testing.md  widget-add-checklist.md
scripts/: audit-appearance-state-mgmt.sh  audit-aria-icon-only-buttons.sh  audit-async-commands.sh  audit-background-spawn-console.sh  audit-blocking-on-runtime.sh  audit-builtin-theme-css-vars.sh  audit-design-tokens.sh  audit-error-format.sh  audit-font-hardcode.sh  audit-font-tokens.sh  audit-handle-style.sh  audit-hotkey-consistency.sh  audit-i18n-hardcode.sh  audit-item-cascade-helper.sh  audit-keyboard-traps.sh  audit-labels.sh  audit-launcher-spawn-leak.sh  audit-library-sidebar-icons.sh  audit-no-horizontal-scrollbar.sh  audit-no-hud-references.sh  audit-no-test-hook-leak.sh  audit-overlay-drag-region.sh  audit-personal-data.sh  audit-readme-data-location.sh  audit-source-back-link.sh  audit-sticky-bar-occlusion.sh  audit-stub-action.sh  audit-text-overflow.sh  audit-version-sync.sh  audit-widget-context-opener.sh  audit-widget-coverage.sh  audit-widget-default-config.sh  audit-widget-default-size-budget.sh  audit-widget-settings-schema.sh  audit-widget-shell.sh  audit-window-confirm.sh  diagnose-lefthook.sh  gen-mig-044.mts  generate-sbom.ps1  personal-data-patterns.txt  (+5 more)
src/: CLAUDE.md  app.css  app.html
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: seed_dev.rs
src-tauri/migrations/: 001_initial.sql  002_mcp_permissions.sql  003_watched_paths.sql  004_workspaces.sql  005_mcp_workspace_permissions.sql  006_themes.sql  007_drop_mcp_permissions.sql  008_category_to_tag.sql  009_add_is_tracked.sql  010_folder_default_app.sql  011_builtin_theme_presets.sql  012_liquid_glass_theme.sql  013_endfield_enhanced.sql  014_ubuntu_frosted_enhanced.sql  015_liquid_glass_token_fix.sql  016_card_override.sql  017_drop_watched_folders.sql  018_workspace_wallpaper.sql  018_workspace_wallpapers.sql  019_widget_item_settings.sql  020_openers.sql  021_remove_clock_widget.sql  022_icon_cache.sql  023_drop_legacy_item_id.sql  024_theme_palette_expansion.sql  025_item_tags_index.sql  026_drop_workspace_system_tags.sql  027_workspace_system_tags_v2.sql  028_drop_widget_item_settings.sql  029_widget_item_hides.sql  030_backfill_sys_type_tags.sql  031_widget_grid_square_finer.sql  032_consolidate_builtin_themes.sql  033_confirmed_items.sql  034_confirmed_scripts.sql  035_design_tokens_v2.sql  036_drop_system_theme_mode.sql  037_system_monitor_chart_type_per_metric.sql  038_card_override_drop_fit.sql  038_drop_card_override_fit.sql  (+8 more)
src-tauri/src/: lib.rs  main.rs  panic_hook.rs
src-tauri/src/commands/: app_paths_commands.rs  bookmark_commands.rs  config_commands.rs  db_recovery_notice_commands.rs  exe_scanner_commands.rs  export_commands.rs  file_preview_commands.rs  file_search_commands.rs  image_scrap_commands.rs  item_commands.rs  kill_switch_commands.rs  launch_commands.rs  metadata_commands.rs  mod.rs  opener_commands.rs  reset_commands.rs  script_commands.rs  startup_notice_commands.rs  system_monitor_commands.rs  theme_commands.rs  url_commands.rs  wallpaper_commands.rs  watched_path_commands.rs  widget_item_hides_commands.rs  widget_item_settings_commands.rs  workspace_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/launcher/: mod.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
src-tauri/src/models/: category.rs  config.rs  git.rs  item.rs  launch.rs  mcp.rs  mod.rs  opener.rs  tag.rs  theme.rs  watched_path.rs  widget_item_settings.rs  workspace.rs
src-tauri/src/plugin_api/: command_provider.rs  item_provider.rs  mod.rs  plugin.rs
src-tauri/src/repositories/: category_repository.rs  config_repository.rs  exe_scan_cache_repository.rs  icon_cache_repository.rs  item_repository.rs  launch_repository.rs  mcp_repository.rs  mod.rs  opener_repository.rs  tag_repository.rs  theme_repository.rs  watched_path_repository.rs  widget_item_hides_repository.rs  widget_item_settings_repository.rs  workspace_repository.rs
src-tauri/src/services/: app_services.rs  bookmark_service.rs  config_service.rs  crash_monitor_service.rs  db_recovery_notice.rs  exe_scanner_service.rs  export_service.rs  file_preview_service.rs  file_search_service.rs  file_search_state.rs  image_scrap_service.rs  item_service.rs  kill_switch_service.rs  launch_service.rs  mcp_service.rs  metadata_service.rs  mod.rs  opener_service.rs  reset_service.rs  script_runner_service.rs  startup_notice.rs  system_monitor_service.rs  telemetry_service.rs  theme_service.rs  url_service.rs  wallpaper_service.rs  watched_path_service.rs  watcher_service.rs  widget_item_hides_service.rs  widget_item_settings_service.rs  workspace_service.rs
src-tauri/src/utils/: error.rs  git.rs  http_client.rs  icon.rs  mod.rs  process.rs
src-tauri/src/watcher/: mod.rs  traits.rs
(+1697 files in other folders)
