[package]
name = "arcagate"
version = "0.1.0"
description = "A personal control panel for launching apps, URLs, scripts, and more"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "arcagate"

[lib]
name = "arcagate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "arcagate_cli"
path = "src/bin/arcagate_cli.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.34", features = ["bundled", "backup"] }
zip = "2"
rusqlite_migration = "2"
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
clap = { version = "4", features = ["derive"] }
tauri-plugin-clipboard-manager = "2"
