[package]
name = "arcagate"
version = "0.1.0"
description = "A personal control panel for launching apps, URLs, scripts, and more"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "arcagate"

[lib]
name = "arcagate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "arcagate_cli"
path = "src/bin/arcagate_cli.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.34", features = ["bundled", "backup"] }
zip = "2"
rusqlite_migration = "2"
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tauri-plugin-clipboard-manager = "2"
notify = "7"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk", "network"] }
ts-rs = { version = "10", features = ["serde-compat"] }
shell-words = "1"
tauri-plugin-updater = "2"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }

# PH-470 batch-106: ureq + rustls 追加で 20MB cap 直前 → release profile 最適化で回収
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
