[package]
name = "arcagate"
version = "0.1.0"
description = "A personal control panel for launching apps, URLs, scripts, and more"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "arcagate"

[lib]
name = "arcagate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "arcagate_cli"
path = "src/bin/arcagate_cli.rs"

[features]
# PH-CF-1210 ⑨ e2e: external process spawn を葉 1 点でテストシームに差し替える build flag。
# 有効時、 `launcher::try_spawn_cmd` は `ARCAGATE_TEST_LAUNCH_SEAM_LOG` 環境変数 path に
# `{ what, program, args, cwd }` の JSON 行を append し、 実 spawn を skip する。 env 未設定なら
# 通常 spawn に fallback (= 同じ binary を seam なしの dev で使える)。 release build にこの
# feature は含まれない (production binary は seam コードを compile-out する)。
test-launch-seam = []

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# audit F4 (2026-05-18): CVE-2026-42184 (origin confusion, Windows) は tauri 2.0–2.11.0
# が該当、patched 2.11.1。floor を 2.11.1 に引き上げ。
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
# #10 dev⇔packaged 検査: autostart 併用時の二重起動で同一 SQLite(WAL) を複数 instance が
# 開く競合を防ぐ。 2 個目の起動は既存 window を前面化して終了する (lib.rs で登録)。
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.34", features = ["bundled", "backup"] }
zip = "2"
rusqlite_migration = "2"
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tauri-plugin-clipboard-manager = "2"
notify = "7"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk", "network"] }
ts-rs = { version = "10", features = ["serde-compat"] }
shell-words = "1"
tauri-plugin-updater = "2"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
# ⑩ 深い階層 scan 並列化 (2026-05-27): exe_scanner_service の第1階層 fork 並列 walk。
# rayon の work-stealing で first-level dir の walk を CPU core 数だけ並列化。
rayon = "1.10"

# PH-470 batch-106: ureq + rustls 追加で 20MB cap 直前 → release profile 最適化で回収
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"

# PH-PQ-100 T6: 本番経路 panic の再発防止 (plan PH-PQ-100 §T6)。
# - unwrap_used = "deny": production code の新規 `.unwrap()` は即 CI fail。
# - expect_used = "warn" / panic = "warn": CI / lefthook の `cargo clippy -- -D warnings`
#   が warning を error 化するため、 本番経路の `.expect()` / `panic!` も実質 block される。
# `#[cfg(test)]` 配下は通常 `cargo clippy` (= 非 --all-targets) の対象外なので test の
# `.unwrap()` / `.expect()` は許容される。 配布対象外の CLI binary は crate root の
# `#![allow(...)]` で明示的に除外する。
[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
